--- a/Brief/AddPPPController.xib
+++ b/Brief/AddPPPController.xib
@@ -4,8 +4,9 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6181.2"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddBriefViewController" customModule="Brief" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddPPPController" customModule="Brief" customModuleProvider="target">
             <connections>
+                <outlet property="cancelButton" destination="fDT-dH-I7W" id="1u6-cm-1eu"/>
                 <outlet property="content" destination="srX-6c-6CE" id="jWf-CU-FvF"/>
                 <outlet property="saveButton" destination="9TS-H5-IQa" id="xcM-jj-dG7"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -27,12 +28,16 @@
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <items>
                         <navigationItem title="Compose" id="zhC-2i-8iF">
-                            <barButtonItem key="leftBarButtonItem" title="Close" id="fDT-dH-I7W">
+                            <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="fDT-dH-I7W">
                                 <connections>
                                     <action selector="dismissModal:" destination="-1" id="ByR-xn-L6U"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem key="rightBarButtonItem" enabled="NO" title="Save" id="9TS-H5-IQa"/>
+                            <barButtonItem key="rightBarButtonItem" enabled="NO" systemItem="done" id="9TS-H5-IQa">
+                                <connections>
+                                    <action selector="save:" destination="-1" id="3pX-PS-db0"/>
+                                </connections>
+                            </barButtonItem>
                         </navigationItem>
                     </items>
                 </navigationBar>
