--- a/Brief/ComposeViewController.xib
+++ b/Brief/ComposeViewController.xib
@@ -6,6 +6,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ComposeViewController" customModule="Brief" customModuleProvider="target">
             <connections>
+                <outlet property="actionButton" destination="D7u-rM-j7t" id="DRY-3g-uxR"/>
+                <outlet property="deleteButton" destination="qyS-dT-7vb" id="g3h-jB-28L"/>
+                <outlet property="table" destination="PnK-ve-qTC" id="cKe-ea-ReI"/>
+                <outlet property="toolbar" destination="1n5-if-skg" id="2ii-6G-nVh"/>
                 <outlet property="view" destination="GrQ-cF-UqD" id="ZyC-KS-K6r"/>
             </connections>
         </placeholder>
@@ -13,6 +17,31 @@
         <view contentMode="scaleToFill" id="GrQ-cF-UqD">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="1n5-if-skg">
+                    <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                    <items>
+                        <barButtonItem systemItem="trash" id="qyS-dT-7vb">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="deleteBrief:" destination="-1" id="u5f-YD-jv6"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="gWd-2R-HV0"/>
+                        <barButtonItem systemItem="action" id="D7u-rM-j7t">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="actionBrief:" destination="-1" id="PVl-mN-Udb"/>
+                            </connections>
+                        </barButtonItem>
+                    </items>
+                    <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                </toolbar>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="PnK-ve-qTC">
+                    <rect key="frame" x="0.0" y="136" width="320" height="388"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <gestureRecognizers/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
