--- a/Brief/ComposeViewController.xib
+++ b/Brief/ComposeViewController.xib
@@ -8,6 +8,7 @@
             <connections>
                 <outlet property="actionButton" destination="D7u-rM-j7t" id="DRY-3g-uxR"/>
                 <outlet property="deleteButton" destination="qyS-dT-7vb" id="g3h-jB-28L"/>
+                <outlet property="descriptionLabel" destination="T48-ew-xly" id="CNv-7e-u2a"/>
                 <outlet property="table" destination="PnK-ve-qTC" id="cKe-ea-ReI"/>
                 <outlet property="toolbar" destination="1n5-if-skg" id="2ii-6G-nVh"/>
                 <outlet property="view" destination="GrQ-cF-UqD" id="ZyC-KS-K6r"/>
@@ -38,9 +39,21 @@
                     <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                 </toolbar>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="PnK-ve-qTC">
-                    <rect key="frame" x="0.0" y="136" width="320" height="388"/>
+                    <rect key="frame" x="0.0" y="116" width="320" height="408"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ISW-6y-jG1">
+                    <rect key="frame" x="0.0" y="64" width="320" height="51"/>
+                    <subviews>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T48-ew-xly">
+                            <rect key="frame" x="20" y="7" width="280" height="37"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.90196079015731812" green="0.90196079015731812" blue="0.90196079015731812" alpha="0.5" colorSpace="calibratedRGB"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <gestureRecognizers/>
@@ -51,7 +64,7 @@
                 <size key="portraitSize" width="320" height="568"/>
                 <size key="landscapeSize" width="568" height="320"/>
             </simulatedScreenMetrics>
-            <point key="canvasLocation" x="483" y="263"/>
+            <point key="canvasLocation" x="298" y="108"/>
         </view>
     </objects>
 </document>
